// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#AvroRenderer should mount DummyComponent 1`] = `
<AvroRenderer
  avroRenderer={
    Object {
      "stringCellRenderer": "stringCellRenderer",
    }
  }
  colDef={
    Object {
      "avro": Object {
        "type": Object {
          "type": "string",
        },
      },
    }
  }
  data={
    Object {
      "value": "value",
    }
  }
  getComponent={[Function]}
/>
`;

exports[`#AvroRenderer should render AvroRenderer and load Injected Component stringCellRenderer 1`] = `
<DummyComponent
  colDef={
    Object {
      "avro": Object {
        "type": Object {
          "type": "string",
        },
      },
    }
  }
  data={
    Object {
      "value": "value",
    }
  }
/>
`;

exports[`#AvroRenderer should render AvroRenderer and load default component when no renderer 1`] = `
<DefaultRenderer
  colDef={
    Object {
      "avro": Object {
        "type": Object {
          "type": "unknow",
        },
      },
    }
  }
  data={
    Object {
      "value": "value",
    }
  }
/>
`;
